examples/test/testpolicy18791.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18791
  namespace: namespace357
spec:
  podSelector:
    matchLabels:
      key38: value11
      key1: value39
      key21: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value37
      podSelector:
        matchLabels:
          key46: value24
          key47: value10
          key22: value3
